WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31456
WAI-ARIA: checkbox does not determine its label from text content
https://bugs.webkit.org/show_bug.cgi?id=31456
Summary
WAI-ARIA: checkbox does not determine its label from text content
chris fleizach
Reported
2009-11-12 22:33:55 PST
accessible name computation needs to work on checkboxes
Attachments
patch
(5.38 KB, patch)
2009-11-12 23:04 PST
,
chris fleizach
darin
: review+
cfleizach
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2009-11-12 23:04:40 PST
Created
attachment 43135
[details]
patch
chris fleizach
Comment 2
2009-11-13 08:58:16 PST
adding to commit-queue
WebKit Commit Bot
Comment 3
2009-11-13 10:00:11 PST
Comment on
attachment 43135
[details]
patch Rejecting patch 43135 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--quiet', '--exit-after-n-failures=1']" exit_code: 1 Running build-dumprendertree Running tests from /Users/eseidel/Projects/CommitQueue/LayoutTests Testing 11618 test cases. inspector/console-dir.html -> crashed Exiting early after 1 failures. 9313 tests run. 461.55s total testing time 9312 test cases (99%) succeeded 1 test case (<1%) crashed 5 test cases (<1%) had stderr output
chris fleizach
Comment 4
2009-11-13 10:49:28 PST
totally not the fault of this patch, but iʻll take care of this patch tonite
Eric Seidel (no email)
Comment 5
2009-11-13 12:07:13 PST
Comment on
attachment 43135
[details]
patch Agreed. You just hit a recent JSC crasher. I've added the crash report to
bug 30835
and we'll spin this one through the queue again.
chris fleizach
Comment 6
2009-11-13 22:12:08 PST
will commit now
chris fleizach
Comment 7
2009-11-13 22:25:23 PST
http://trac.webkit.org/changeset/50994
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug