WAI-ARIA: checkbox does not determine its label from text content https://bugs.webkit.org/show_bug.cgi?id=31456

Reviewed by Darin Adler.

WebCore: 

Test: accessibility/aria-checkbox-text.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::title):

LayoutTests: 

* accessibility/aria-checkbox-text.html: Added.
* platform/gtk/Skipped:
* platform/mac/accessibility/aria-checkbox-text-expected.txt: Added.
* platform/win/Skipped:



git-svn-id: svn://svn.chromium.org/blink/trunk@50994 bbb929c8-8fbe-4397-9dbb-9b2b20218538