third_party/WebKit/WebCore/accessibility/AccessibilityRenderObject.cpp
@@ -1055,6 +1055,7 @@ String AccessibilityRenderObject::title() const
         || ariaRole == MenuItemRole
         || ariaRole == MenuButtonRole
         || ariaRole == RadioButtonRole
+        || ariaRole == CheckBoxRole
         || ariaRole == TabRole
         || isHeading())
         return textUnderElement();
